policies/standard/pod_capabilities_blacklist/constraint_sys_admin.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodCapabilitiesBlacklistPolicy
metadata:
  name: k8spodcapabilitiesdropsysadmin
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod", "ReplicationController"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet", "ReplicaSet"]
      - apiGroups: ["batch"]
        kinds: ["Job", "CronJob"]
    excludedNamespaces: []
  parameters:
    capability: "SYS_ADMIN"
